2014-04-18  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* NEWS:
	Fix ordering, cleanup formatting and add
	missing entry for PR1279. Change to 3.0.0
	and move into 2014.

2013-06-06  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* INSTALL:
	Synchronise list of VMs with macro in acinclude.m4.
	* acinclude.m4: Provide separate output for user
	specified JDKs and the checking process.  Extend
	the list of JVMs to include more from Fedora &
	RHEL and the newer Gentoo variants.
	* NEWS: Updated.

2013-03-21  Michal Vyskocil  <mvyskocil@suse.cz>

	PR1359: Check for /usr/lib64 JVMs and generic JPackage alternative
	* INSTALL: Add /etc/alternatives/java_sdk_openjdk.
	* acinclude.m4: Likewise.

2013-06-06  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* AUTHORS: Updated with Michal.

2013-04-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* patches/cacao/jsig.patch:
	Removed.
	* Makefile.am:
	(CACAO_VERSION): Bump to current tip.
	(CACAO_SHA256SUM): Likewise.
	(ICEDTEA_PATCHES): Drop unneeded jsig patch.

2012-02-10  Xerxes Rånby  <xerxes@zafena.se>

	* Makefile.am
	(CACAO_VERSION): Updated CACAO to 2012-02-09 revision.
	(CACAO_SHA256SUM): Updated.
	(stamps/cacao.stamp): Use --with-java-runtime-library=openjdk7.
	Add -f when creating client and server symlinks to handle repeat builds.
	Link the fake libjsig.so to CACAO libjvm.so, and touch fake Xusage.txt
	to work with latest OpenJDK ALT_HOTSPOT_IMPORT_PATH functionality.
	* patches/cacao/version.patch: Removed, replaced by upstream CACAO changeset 30edcde287d9.

2011-08-30  Xerxes Rånby  <xerxes@zafena.se>

	CACAO
	- CA149: Used wrong class loader.
	- src/vm/javaobjects.cpp (java_lang_reflect_Method::invoke):
	  [OPENJDK] stack index of caller was off by one, causing many apt
	  (Annotation Processing Tool) failures.
	* Makefile.am
	(CACAO_VERSION): Updated CACAO to 2011-08-29 revision.
	(CACAO_SHA256SUM): Updated.

2011-08-09  Xerxes Rånby  <xerxes@zafena.se>

	CACAO