@@ -1,3 +1,10 @@
+2012-10-08  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	Move JDK_UPDATE_VERSION and COMBINED_VERSION
+	to top of file with OPENJDK_VERSION.
+	(JDK_UPDATE_VERSION): Set to 02 for u2.
+
 2014-04-18  Andrew John Hughes  <gnu.andrew@member.fsf.org>
 
 	* NEWS:
